--- a/index.html
+++ b/index.html
@@ -91,11 +91,8 @@
             </h1>
 
             <div class="d-flex">
-              <a href="#about" class="btn-get-started scrollto">Get Started</a>
-              <a
-                href="https://www.youtube.com/watch?v=jDDaplaOz7Q"
-                class="glightbox btn-watch-video"
-                ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
+              <a href="#about" class="btn-get-started scrollto mt-3"
+                >Get Started</a
               >
             </div>
           </div>
