--- a/index.html
+++ b/index.html
@@ -36,13 +36,59 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
 
-    <!-- =======================================================
-  * Template Name: eNno - v4.9.1
-  * Template URL: https://bootstrapmade.com/enno-free-simple-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <style>
+      html,
+      body {
+        position: relative;
+        height: 100%;
+      }
+
+      body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+      }
+
+      .swiper {
+        width: 100%;
+        height: 100%;
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    </style>
   </head>
 
   <body>
@@ -105,8 +151,56 @@
     <!-- End Hero -->
 
     <main id="main">
+      <!-- Swiper -->
+      <div style="width: 68%" class="swiper mySwiper py-5">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img class="w-100" src="./assets/img/img02.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img03 (1).jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img04.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img05.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img06.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img04.jpg" alt="" />
+          </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+
+      <!-- Swiper JS -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+      <!-- Initialize Swiper -->
+      <script>
+        var swiper = new Swiper(".mySwiper", {
+          slidesPerView: 3,
+          spaceBetween: 30,
+          slidesPerGroup: 3,
+          loop: true,
+          loopFillGroupWithBlank: true,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+        });
+      </script>
       <!-- ======= Featured Services Section ======= -->
-      <section id="featured-services" class="featured-services">
+      <section id="featured-services" class="featured-services mt-5">
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-md-6">
@@ -143,7 +237,6 @@
         </div>
       </section>
       <!-- End Featured Services Section -->
-
       <!-- ======= About Section ======= -->
       <section id="about" class="about">
         <div class="container">
