--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
+    <!-- Link Swiper's CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
@@ -131,10 +132,17 @@
           <div
             class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
           >
-            <h1>
+            <h2 class="hero_title">
               Digital Strategy Design Lab (DSDL) is an innovative model for
               effective digital transformation.
-            </h1>
+            </h2>
+            <p class="hero_description">
+              DSDL is a 5-7 days workshop conducted by a government agency where
+              the service beneficiaries, service providers and ICT experts work
+              together to analyze manual services, design digital services and
+              prepare implementation plan for the digital transformation of the
+              agency.
+            </p>
 
             <div class="d-flex">
               <a href="#about" class="btn-get-started scrollto mt-3"
@@ -143,7 +151,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img">
-            <img src="assets/img/logo.jpeg" class="img-fluid animated" alt="" />
+            <img class="hero_logo" src="assets/img/logo.jpeg" alt="" />
           </div>
         </div>
       </div>
@@ -152,10 +160,13 @@
 
     <main id="main">
       <!-- Swiper -->
-      <div style="width: 68%" class="swiper mySwiper py-5">
+      <div style="width: 70%" class="swiper mySwiper my-5">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img class="w-100" src="./assets/img/img02.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img03.jpg" alt="" />
           </div>
           <div class="swiper-slide">
             <img src="./assets/img/img03 (1).jpg" alt="" />
@@ -164,10 +175,16 @@
             <img src="./assets/img/img04.jpg" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/img/img05.jpg" alt="" />
+            <img src="./assets/img/img04.jpg" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/img/img06.jpg" alt="" />
+            <img src="./assets/img/img04.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img03 (1).jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/img02.jpg" alt="" />
           </div>
           <div class="swiper-slide">
             <img src="./assets/img/img04.jpg" alt="" />
