--- a/index.html
+++ b/index.html
@@ -156,14 +156,62 @@
         </div>
       </div>
     </section>
+
+    <!-- ======= Counts Section ======= -->
+    <section style="background-color: #ffffff" id="counts" class="counts py-5">
+      <div class="container">
+        <div class="row counters">
+          <div class="col-lg-3 col-6 text-center">
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="232"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Clients</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="521"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Projects</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="1463"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Hours Of Support</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="15"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Hard Workers</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Counts Section -->
     <!-- End Hero -->
 
     <main id="main">
       <!-- Swiper -->
-      <div style="width: 70%" class="swiper mySwiper my-5">
+      <div class="swiper mySwiper container my-5">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img class="w-100" src="./assets/img/img02.jpg" alt="" />
+            <img src="./assets/img/img02.jpg" alt="" />
           </div>
           <div class="swiper-slide">
             <img src="./assets/img/img03.jpg" alt="" />
