--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css" />
+
     <!-- Link Swiper's CSS -->
     <link
       rel="stylesheet"
@@ -208,62 +210,71 @@
 
     <main id="main">
       <!-- Swiper -->
-      <div class="swiper mySwiper container my-5">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="./assets/img/img02.jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img03.jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img03 (1).jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img04.jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img04.jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img04.jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img03 (1).jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img02.jpg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/img04.jpg" alt="" />
+      <div class="swiper container my-5">
+        <div class="slide-content">
+          <div class="card-wrapper swiper-wrapper">
+            <div
+              style="
+                width: 300px;
+                height: 329px;
+                margin-right: 25px;
+                background: none;
+                border: none;
+              "
+              class="card swiper-slide"
+            >
+              <div class="image-content">
+                <div class="card-image">
+                  <img src="/assets/img/img02.jpg" alt="" class="card-img" />
+                </div>
+              </div>
+            </div>
+            <div
+              style="
+                width: 300px;
+                height: 329px;
+                margin-right: 25px;
+                background: none;
+                border: none;
+              "
+              class="card swiper-slide"
+            >
+              <div class="image-content">
+                <div class="card-image">
+                  <img
+                    src="/assets/img/img03 (1).jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+            </div>
+            <div
+              style="
+                width: 300px;
+                height: 329px;
+                margin-right: 25px;
+                background: none;
+                border: none;
+              "
+              class="card swiper-slide"
+            >
+              <div class="image-content">
+                <div class="card-image">
+                  <img src="/assets/img/img03.jpg" alt="" class="card-img" />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
         <div class="swiper-pagination"></div>
       </div>
 
-      <!-- Swiper JS -->
-      <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-
       <!-- Initialize Swiper -->
-      <script>
-        var swiper = new Swiper(".mySwiper", {
-          slidesPerView: 3,
-          spaceBetween: 30,
-          slidesPerGroup: 3,
-          loop: true,
-          loopFillGroupWithBlank: true,
-          pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-          },
-          navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-          },
-        });
-      </script>
+
       <!-- ======= Featured Services Section ======= -->
       <section id="featured-services" class="featured-services mt-5">
         <div class="container">
@@ -1124,5 +1135,10 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <!-- Swiper JS -->
+    <script src="js/swiper-bundle.min.js"></script>
+
+    <!-- JavaScript -->
+    <script src="js/script.js"></script>
   </body>
 </html>
