--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img">
-            <img class="hero_logo" src="assets/img/logo.jpeg" alt="" />
+            <img class="hero_logo animated" src="assets/img/logo.jpeg" alt="" />
           </div>
         </div>
       </div>
     </section>
 
     <!-- ======= Counts Section ======= -->
-    <section style="background-color: #ffffff" id="counts" class="counts py-5">
+    <section style="background-color: #ffffff" id="counts" class="counts">
       <div class="container">
         <div class="row counters">
           <div class="col-lg-3 col-6 text-center">
