--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
     <main class="container" id="main">
       <!--Start Swiper -->
-      <div class="swiper container my-5">
-        <h2 class="text-center">Photo Gallery</h2>
+      <div class="swiper container gallery">
+        <h2 class="photo_gallary">Photo Gallery</h2>
         <div class="slide-content">
           <div class="card-wrapper swiper-wrapper">
             <div
