--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
     <main class="container" id="main">
       <!--Start Swiper -->
-      <div class="swiper container gallery">
-        <h2 class="photo_gallary">Photo Gallery</h2>
+      <div class="swiper container">
+        <h2 class="photo_gallary pb-5">Photo Gallery</h2>
         <div class="slide-content">
           <div class="card-wrapper swiper-wrapper">
             <div
@@ -282,7 +282,7 @@
 
       <!-- Start Portfolio -->
       <div class="portfolio">
-        <h3>Portfolio</h3>
+        <h3 class="pb-5">Portfolio</h3>
         <img src="/assets/img/portfolio.png" alt="" />
       </div>
       <!-- End Portfolio -->
