--- a/index.html
+++ b/index.html
@@ -226,12 +226,7 @@
             >
               <div class="image-content">
                 <div class="card-image">
-                  <img
-                    style="width: 100%"
-                    src="/assets/img/img02.jpg"
-                    alt=""
-                    class="card-img"
-                  />
+                  <img src="/assets/img/img02.jpg" alt="" class="card-img" />
                 </div>
               </div>
             </div>
