--- a/index.html
+++ b/index.html
@@ -408,10 +408,16 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-6">
-              <h3>eNno</h3>
+              <h3>Digital Service Implementation</h3>
               <p>
-                Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni
-                eligendi fuga maxime saepe commodi placeat.
+                There is no alternative to implementing planned digital
+                governance to implement 'Vision-2021' and 'Digital Bangladesh'
+                for dream of Honorable Prime Minister. In order to ensure
+                proper, timely, effective and well-planned implementation of
+                this digital governance service at all levels, it is necessary
+                to prepare and coordinate the Digital (Mobile-Service /
+                e-Service) implementation Roadmap 2021 (Implementation Plan) of
+                each Ministry / Department / Department / Department / Agency. ”
               </p>
             </div>
           </div>
@@ -438,18 +444,8 @@
         </div>
       </div>
 
-      <div class="container footer-bottom clearfix">
-        <div class="copyright">
-          &copy; Copyright <strong><span>eNno</span></strong
-          >. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/enno-free-simple-bootstrap-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+      <div class="container footer-bottom clearfix text-center">
+        <div>Copyright © 2022 । All right reserved, a2i</div>
       </div>
     </footer>
     <!-- End Footer -->
