--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Digital Service Implementation</title>
+    <title>DSDL</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -110,13 +110,15 @@
             <li><a class="nav-link scrollto" href="#about">About Us</a></li>
             <li><a class="nav-link scrollto" href="#services">Event</a></li>
             <li>
-              <a class="nav-link scrollto" href="#portfolio">How It Works</a>
+              <a class="nav-link scrollto" href="#how_works">How It Works</a>
             </li>
-            <li><a class="nav-link scrollto" href="#team">Achievement </a></li>
+            <li>
+              <a class="nav-link scrollto" href="#portfolio">Portfolio </a>
+            </li>
 
             <li><a class="nav-link scrollto" href="#road">Road Map</a></li>
             <li>
-              <a class="nav-link scrollto" href="#galarry">Photo Gallery</a>
+              <a class="nav-link scrollto" href="#gallery">Photo Gallery</a>
             </li>
             <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
           </ul>
@@ -210,7 +212,7 @@
 
     <main class="container" id="main">
       <!--Start Swiper -->
-      <div class="swiper container">
+      <div id="gallery" class="swiper container">
         <h2 class="photo_gallary pb-5">Photo Gallery</h2>
         <div class="slide-content">
           <div class="card-wrapper swiper-wrapper">
@@ -276,14 +278,14 @@
       <!--End Swiper -->
 
       <!-- Start Portfolio -->
-      <div class="portfolio">
+      <div class="portfolio" id="portfolio">
         <h3 class="pb-5">Portfolio</h3>
         <img src="/assets/img/portfolio.png" alt="" />
       </div>
       <!-- End Portfolio -->
       <!--  Start Roadmap -->
-      <div class="roadmap">
-        <h3>Roadmap</h3>
+      <div id="how_works" class="how_it_works">
+        <h3>How It Works</h3>
         <div class="roadmap_img py-5">
           <img src="/assets/img/roadmap 1.png" alt="" />
         </div>
@@ -299,10 +301,6 @@
           <div class="section-title">
             <span>Contact</span>
             <h2>Contact</h2>
-            <p>
-              Sit sint consectetur velit quisquam cupiditate impedit suscipit
-              alias
-            </p>
           </div>
 
           <div class="row">
@@ -311,7 +309,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>ICT Tower, Agargaon, Dhaka</p>
                 </div>
 
                 <div class="email">
@@ -323,11 +321,11 @@
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
+                  <p>+8801730717482</p>
                 </div>
 
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d29208.962650649242!2d90.374468!3d23.778729!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfec009b60808d80a!2sICT%20Tower!5e0!3m2!1sen!2sbd!4v1666351538216!5m2!1sen!2sbd"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
@@ -404,48 +402,15 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-6">
-              <h3>Digital Service Implementation</h3>
-              <p>
-                There is no alternative to implementing planned digital
-                governance to implement 'Vision-2021' and 'Digital Bangladesh'
-                for dream of Honorable Prime Minister. In order to ensure
-                proper, timely, effective and well-planned implementation of
-                this digital governance service at all levels, it is necessary
-                to prepare and coordinate the Digital (Mobile-Service /
-                e-Service) implementation Roadmap 2021 (Implementation Plan) of
-                each Ministry / Department / Department / Department / Agency. ”
-              </p>
-            </div>
-          </div>
-
-          <div class="row footer-newsletter justify-content-center">
-            <div class="col-lg-6">
-              <form action="" method="post">
-                <input
-                  type="email"
-                  name="email"
-                  placeholder="Enter your Email"
-                /><input type="submit" value="Subscribe" />
-              </form>
-            </div>
-          </div>
-
-          <div class="social-links">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          </div>
-        </div>
-      </div>
-
       <div class="container footer-bottom clearfix text-center">
         <div>Copyright © 2022 । All right reserved, a2i</div>
+        <small>
+          Crafted by
+          <a href="https://www.linkedin.com/in/mehedi-hasan-anik-88a693235/"
+            >Mehedi</a
+          >
+          & <a href="https://www.linkedin.com/in/md-nazmul-hasan-anik/">Anik</a>
+        </small>
       </div>
     </footer>
     <!-- End Footer -->
