--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
             <li><a class="nav-link scrollto" href="#about">About Us</a></li>
             <li><a class="nav-link scrollto" href="#services">Event</a></li>
             <li>
-              <a class="nav-link scrollto" href="#how_works">How It Works</a>
-            </li>
-            <li>
               <a class="nav-link scrollto" href="#portfolio">Portfolio </a>
             </li>
+            <li>
+              <a class="nav-link scrollto" href="#how_works">How It Works</a>
+            </li>
 
-            <li><a class="nav-link scrollto" href="#road">Road Map</a></li>
+            <li><a class="nav-link scrollto" href="#roadmap">Road Map</a></li>
             <li>
               <a class="nav-link scrollto" href="#gallery">Photo Gallery</a>
             </li>
@@ -150,7 +150,7 @@
 
             <div class="d-flex">
               <a href="#about" class="btn-get-started scrollto mt-3"
-                >Get Started</a
+                >Learn More</a
               >
             </div>
           </div>
@@ -283,7 +283,7 @@
         <img src="/assets/img/portfolio.png" alt="" />
       </div>
       <!-- End Portfolio -->
-      <!--  Start Roadmap -->
+      <!--  Start how it works -->
       <div id="how_works" class="how_it_works">
         <h3>How It Works</h3>
         <div class="roadmap_img py-5">
@@ -293,7 +293,13 @@
           <img src="/assets/img/roadmap 2.png" alt="" />
         </div>
       </div>
-      <!--  End Roadmap -->
+      <!--  End how it works-->
+      <!-- Start Road map -->
+      <div class="portfolio roadmap" id="roadmap">
+        <h3 class="pb-5">Roadmap</h3>
+        <img src="/assets/img/roadmap.png" alt="" />
+      </div>
+      <!-- End Roadmap -->
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
