--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About Us</a></li>
+            <li>
+              <a class="nav-link scrollto" href="#gallery">Photo Gallery</a>
+            </li>
             <li><a class="nav-link scrollto" href="#services">Event</a></li>
             <li>
               <a class="nav-link scrollto" href="#portfolio">Portfolio </a>
@@ -117,9 +120,7 @@
             </li>
 
             <li><a class="nav-link scrollto" href="#roadmap">Road Map</a></li>
-            <li>
-              <a class="nav-link scrollto" href="#gallery">Photo Gallery</a>
-            </li>
+
             <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -302,7 +303,7 @@
       <!-- End Roadmap -->
 
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
+      <section id="contact" class="contact mb-5 mt-4">
         <div class="container">
           <div class="section-title">
             <span>Contact</span>
@@ -408,7 +409,7 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="container footer-bottom clearfix text-center">
+      <div class="container footer-bottom clearfix text-center mt-5">
         <div>Copyright © 2022 । All right reserved, a2i</div>
         <small>
           Crafted by
