--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
         <h1 class="logo">
-          <a href="index.html"><img src="/assets/img/bdlogo.png" alt="" /></a>
+          <a class="me-4" href="index.html"
+            ><img src="/assets/img/ict_ministry.png" alt=""
+          /></a>
+          <a href="index.html"
+            ><img style="width: 50px" src="/assets/img/a2i.png" alt=""
+          /></a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -169,41 +174,41 @@
           <div class="col-lg-3 col-6 text-center">
             <span
               data-purecounter-start="0"
-              data-purecounter-end="232"
+              data-purecounter-end="56"
               data-purecounter-duration="1"
               class="purecounter"
             ></span>
-            <p>Clients</p>
+            <p>Ministries</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
             <span
               data-purecounter-start="0"
-              data-purecounter-end="521"
+              data-purecounter-end="394"
               data-purecounter-duration="1"
               class="purecounter"
             ></span>
-            <p>Projects</p>
+            <p>Organizations</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
             <span
               data-purecounter-start="0"
-              data-purecounter-end="1463"
+              data-purecounter-end="225"
               data-purecounter-duration="1"
               class="purecounter"
             ></span>
-            <p>Hours Of Support</p>
+            <p>Software BRD</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
             <span
               data-purecounter-start="0"
-              data-purecounter-end="15"
+              data-purecounter-end="25"
               data-purecounter-duration="1"
               class="purecounter"
             ></span>
-            <p>Hard Workers</p>
+            <p>Govt. Procurements</p>
           </div>
         </div>
       </div>
