--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About Us</a></li>
+            <li><a class="nav-link scrollto" href="#about_us">About Us</a></li>
             <li>
               <a class="nav-link scrollto" href="#gallery">Photo Gallery</a>
             </li>
-            <li><a class="nav-link scrollto" href="#services">Event</a></li>
+            <!-- <li><a class="nav-link scrollto" href="#services">Event</a></li> -->
             <li>
               <a class="nav-link scrollto" href="#portfolio">Portfolio </a>
             </li>
@@ -214,7 +214,7 @@
       </div>
     </section>
     <!-- End Counts Section -->
-    <section id=" about_us" class="d-flex align-items-center about_us mt-5">
+    <section id="about_us" class="d-flex align-items-center about_us mt-5">
       <div class="container">
         <div class="row">
           <h2
