--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <a class="nav-link scrollto" href="#how_works">How It Works</a>
             </li>
 
-            <li><a class="nav-link scrollto" href="#roadmap">Road Map</a></li>
+            <li><a class="nav-link scrollto" href="#roadmap">Roadmap</a></li>
 
             <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
           </ul>
