--- a/index.html
+++ b/index.html
@@ -460,10 +460,21 @@
       <!-- End Contact Section -->
     </main>
     <!-- End #main -->
+    <!-- logo_links -->
+    <section class="logo_links mt-5">
+      <h1 class="logo_link">
+        <a class="me-4" href="index.html"
+          ><img src="/assets/img/ict_ministry.png" alt=""
+        /></a>
+        <a href="index.html"
+          ><img style="width: 50px" src="/assets/img/a2i.png" alt=""
+        /></a>
+      </h1>
+    </section>
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="container footer-bottom clearfix text-center mt-5">
+      <div class="container footer-bottom clearfix text-center">
         <div>Copyright © 2022 । All right reserved, a2i</div>
         <small>
           Crafted by
