--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>ashiqul.aziz@a2i.gov.bd</p>
                 </div>
 
                 <div class="phone">
@@ -478,10 +478,17 @@
         <div>Copyright © 2022 । All right reserved, a2i</div>
         <small>
           Crafted by
-          <a href="https://www.linkedin.com/in/mehedi-hasan-anik-88a693235/"
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/mehedi-hasan-anik-88a693235/"
             >Mehedi</a
           >
-          & <a href="https://www.linkedin.com/in/md-nazmul-hasan-anik/">Anik</a>
+          &
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/md-nazmul-hasan-anik/"
+            >Anik</a
+          >
         </small>
       </div>
     </footer>
