--- a/index.html
+++ b/index.html
@@ -443,8 +443,10 @@
                   ></textarea>
                 </div>
                 <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
+                  <div class="loading">
+                    Your message has been sent. Thank you!
+                  </div>
+
                   <div class="sent-message">
                     Your message has been sent. Thank you!
                   </div>
