--- a/index.html
+++ b/index.html
@@ -237,6 +237,18 @@
             </div>
             <div style="border: none" class="card swiper-slide">
               <div class="image-content">
+                <div class="card-image main-img">
+                  <img
+                    style=""
+                    src="/assets/img/three.jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+            </div>
+            <div style="border: none" class="card swiper-slide">
+              <div class="image-content">
                 <div class="card-image">
                   <img src="/assets/img/img02.jpg" alt="" class="card-img" />
                 </div>
