--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
         <h1 class="logo">
-          <a class="me-4" href="index.html"
+          <a class="me-4" href="/"
             ><img src="/assets/img/ict_ministry.png" alt=""
           /></a>
-          <a href="index.html"
+          <a href="/"
             ><img style="width: 50px" src="/assets/img/a2i.png" alt=""
           /></a>
         </h1>
@@ -425,10 +425,10 @@
     <!-- logo_links -->
     <section class="logo_links mt-5">
       <h1 class="logo_link">
-        <a class="me-4" href="index.html"
+        <a class="me-4" href="/"
           ><img src="/assets/img/ict_ministry.png" alt=""
         /></a>
-        <a href="index.html"
+        <a href="/"
           ><img style="width: 50px" src="/assets/img/a2i.png" alt=""
         /></a>
       </h1>
