--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
       <!--  Start how it works -->
       <div id="how_works" class="how_it_works">
         <h3>How It Works</h3>
-        <div class="roadmap_img py-5">
+        <div class="roadmap_img pt-5">
           <img src="/assets/img/roadmap 1.png" alt="" />
         </div>
-        <div class="roadmap_img py-5">
+        <div class="roadmap_img pt-5">
           <img src="/assets/img/roadmap 2.png" alt="" />
         </div>
       </div>
