--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </p>
 
             <div class="d-flex">
-              <a href="#about" class="btn-get-started scrollto mt-3"
+              <a href="#about_us" class="btn-get-started scrollto mt-3"
                 >Learn More</a
               >
             </div>
