--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
             <li>
               <a class="nav-link scrollto" href="#gallery">Photo Gallery</a>
             </li>
-            <!-- <li><a class="nav-link scrollto" href="#services">Event</a></li> -->
+
             <li>
               <a class="nav-link scrollto" href="#portfolio">Portfolio </a>
             </li>
+            <li><a class="nav-link scrollto" href="#events">Events</a></li>
             <li>
               <a class="nav-link scrollto" href="#how_works">How It Works</a>
             </li>
@@ -298,6 +299,13 @@
         <img src="/assets/img/portfolio.png" alt="" />
       </div>
       <!-- End Portfolio -->
+      <!-- start event -->
+      <div class="portfolio" id="events">
+        <h3 class="pb-5">Events</h3>
+        <img src="/assets/img/events.png" alt="" />
+      </div>
+      <!-- end event -->
+
       <!--  Start how it works -->
       <div id="how_works" class="how_it_works">
         <h3>How It Works</h3>
