--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img">
-            <img class="hero_logo animated" src="assets/img/logo.jpeg" alt="" />
+            <img class="hero_logo" src="assets/img/logo.jpeg" alt="" />
           </div>
         </div>
       </div>
