--- a/index.html
+++ b/index.html
@@ -91,28 +91,14 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
+            class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center hero-img"
           >
-            <h2 class="hero_title">
-              Digital Strategy Design Lab (DSDL) is an innovative model for
-              effective digital transformation.
-            </h2>
-            <p class="hero_description">
-              DSDL is a 5-7 days workshop conducted by a government agency where
-              the service beneficiaries, service providers and ICT experts work
-              together to analyze manual services, design digital services and
-              prepare implementation plan for the digital transformation of the
-              agency.
-            </p>
-
-            <div class="d-flex">
-              <a href="#about_us" class="btn-get-started scrollto mt-3"
-                >Learn More</a
-              >
-            </div>
-          </div>
-          <div class="col-lg-6 order-1 order-lg-2 hero-img">
             <img class="hero_logo" src="assets/img/logo.jpeg" alt="" />
+          </div>
+          <div class="col-lg-6 order-1 order-lg-2">
+            <div class="image">
+              <img class="w-100" src="./assets/img/ict mister.jpeg" alt="" />
+            </div>
           </div>
         </div>
       </div>
