--- a/index.html
+++ b/index.html
@@ -177,18 +177,13 @@
                 service digitalization, this is a synergistic planning approach
                 i.e. service recipient, service provider, decision makers and
                 technology experts plan together sharing their knowledge and
-                experiences. It has step-by-step methodical approach but A-Z
-                i.e. study, diagnosis, analysis, design & plan of digitalization
-                which is basically hands on work for consecutive 7 days to
-                develop e-Government Masterplan. This results extremely high
-                ownership of Govt. officials generating maximum output in
-                minimum time enhancing digitalization capacity significantly.
+                experiences. It has step-by-step methodical approach.
               </p>
             </div>
           </div>
           <div class="col-12 col-md-12 col-lg-6">
             <div class="image">
-              <img class="w-100" src="./assets/img/ict mister.jpeg" alt="" />
+              <img class="w-100" src="/assets/img/three.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -216,18 +211,7 @@
                 </div>
               </div>
             </div>
-            <div style="border: none" class="card swiper-slide">
-              <div class="image-content">
-                <div class="card-image main-img">
-                  <img
-                    style=""
-                    src="/assets/img/three.jpg"
-                    alt=""
-                    class="card-img"
-                  />
-                </div>
-              </div>
-            </div>
+
             <div style="border: none" class="card swiper-slide">
               <div class="image-content">
                 <div class="card-image">
