--- a/index.html
+++ b/index.html
@@ -91,9 +91,21 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center hero-img"
+            class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
           >
-            <img class="hero_logo" src="assets/img/logo.jpeg" alt="" />
+            <h2 class="hero_title">
+              Digital Strategy Design Lab (DSDL) is an innovative model for
+              effective digital transformation.
+            </h2>
+            <div class="hero-img mt-3 mb-5">
+              <img class="hero_logo" src="assets/img/logo.jpeg" alt="" />
+            </div>
+
+            <div class="d-flex">
+              <a href="#about_us" class="btn-get-started scrollto mt-3"
+                >Learn More</a
+              >
+            </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="image">
@@ -177,7 +189,7 @@
                 service digitalization, this is a synergistic planning approach
                 i.e. service recipient, service provider, decision makers and
                 technology experts plan together sharing their knowledge and
-                experiences. It has step-by-step methodical approach.
+                experiences.
               </p>
             </div>
           </div>
