--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
+            class="col-lg-6 pt-5 pt-lg-0 pb-md-5 pb-lg-0 d-flex flex-column justify-content-center"
           >
             <h2 class="hero_title">
               Digital Strategy Design Lab (DSDL) is an innovative model for
